--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     compile 'com.mcxiaoke.viewpagerindicator:library:+'
     compile 'com.hovans.pulltorefresh:library:2.1.1'
     compile 'com.nineoldandroids:library:2.4.+'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:+'
-    compile 'com.loopj.android:android-async-http:+'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
+    compile 'com.loopj.android:android-async-http:1.4.5'
 }
 
