--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 19
         versionCode 1
-        versionName "beta 0.1"
+        versionName "0.1"
     }
     buildTypes {
         release {
