--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
         <activity
             android:name=".act.ChapterActivity"
             android:screenOrientation="portrait"
+            android:launchMode="singleTask"
             android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".act.BookDetailActivity"
@@ -60,6 +61,7 @@
             android:name=".act.ReadActivity"
             android:hardwareAccelerated="false"
             android:screenOrientation="portrait"
+            android:launchMode="singleTask"
             android:theme="@style/AppThemeRead" />
         <activity
             android:name=".act.SettingActivity"
