--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,7 +108,7 @@
             android:value="@string/UMENG_APPKEY"/>
         <meta-data
             android:name="UMENG_CHANNEL"
-            android:value="endreader" />
+            android:value="shuba" />
 
         <!-- ****************************jpush***************************** -->
 
