--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.qiwenge.android">
+    package="com.qiwenge.android" >
 
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -28,73 +28,70 @@
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".act.SplashActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/SplashTheme"
-            android:windowSoftInputMode="adjustNothing">
+            android:windowSoftInputMode="adjustNothing" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".act.MainActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing" />
-
         <activity
             android:name=".act.ChapterActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing" />
-
         <activity
             android:name=".act.BookDetailActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".act.SearchActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing" />
-
         <activity
             android:name=".act.ReadActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/AppThemeRead" />
-
         <activity
             android:name=".act.SettingActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".act.LegalActivity"
             android:label="@string/set_legal" />
+        <activity
+            android:name=".act.FeedbackActivity"
+            android:windowSoftInputMode="stateAlwaysVisible"
+            android:label="@string/title_activity_feedback" >
+        </activity>
+
 
         <service
             android:name=".openudid.OpenUDID_service"
-            android:exported="false">
+            android:exported="false" >
             <intent-filter>
                 <action android:name="com.qiwenge.android.openudid.GETUDID" />
             </intent-filter>
         </service>
 
         <!-- receivers -->
-        <receiver android:name=".receivers.WifiStatusChangeReceiver">
+        <receiver android:name=".receivers.WifiStatusChangeReceiver" >
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
                 <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
                 <action android:name="android.net.wifi.STATE_CHANGE" />
             </intent-filter>
         </receiver>
-
-        <receiver android:name=".receivers.UpdateReceiver">
+        <receiver android:name=".receivers.UpdateReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
                 <action android:name="android.intent.action.DOWNLOAD_NOTIFICATION_CLICKED" />
@@ -105,7 +102,7 @@
 
         <meta-data
             android:name="UMENG_APPKEY"
-            android:value="@string/UMENG_APPKEY"/>
+            android:value="@string/UMENG_APPKEY" />
         <meta-data
             android:name="UMENG_CHANNEL"
             android:value="shuba" />
@@ -117,7 +114,7 @@
         <service
             android:name="cn.jpush.android.service.PushService"
             android:enabled="true"
-            android:exported="false">
+            android:exported="false" >
             <intent-filter>
                 <action android:name="cn.jpush.android.intent.REGISTER" />
                 <action android:name="cn.jpush.android.intent.REPORT" />
@@ -130,8 +127,8 @@
         <receiver
             android:name="cn.jpush.android.service.PushReceiver"
             android:enabled="true"
-            android:exported="false">
-            <intent-filter android:priority="1000"> <!-- since 1.3.5 -->
+            android:exported="false" >
+            <intent-filter android:priority="1000" > <!-- since 1.3.5 -->
                 <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY" />
                 <!-- since 1.3.5 -->
                 <category android:name="com.qiwenge.android" />
@@ -153,7 +150,7 @@
         <activity
             android:name="cn.jpush.android.ui.PushActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar">
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
             <intent-filter>
                 <action android:name="cn.jpush.android.ui.PushActivity" />
 
@@ -166,7 +163,7 @@
         <service
             android:name="cn.jpush.android.service.DownloadService"
             android:enabled="true"
-            android:exported="false"></service>
+            android:exported="false" />
         <!-- Required SDK核心功能 -->
         <receiver android:name="cn.jpush.android.service.AlarmReceiver" />
 
@@ -176,7 +173,6 @@
         <meta-data
             android:name="JPUSH_APPKEY"
             android:value="@string/JPUSH_APPKEY" />
-
     </application>
 
 </manifest>
