--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.qiwenge.android" >
+    package="com.qiwenge.android">
 
     <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -28,13 +28,13 @@
         android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".act.SplashActivity"
             android:label="@string/app_name"
+            android:launchMode="standard"
             android:screenOrientation="portrait"
-            android:theme="@style/SplashTheme"
-            android:windowSoftInputMode="adjustNothing" >
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -48,15 +48,14 @@
         <activity
             android:name=".act.ChapterActivity"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustNothing" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".act.BookDetailActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".act.SearchActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustNothing" />
+            android:windowSoftInputMode="stateVisible|adjustNothing" />
         <activity
             android:name=".act.ReadActivity"
             android:launchMode="singleTask"
@@ -70,28 +69,33 @@
             android:label="@string/set_legal" />
         <activity
             android:name=".act.FeedbackActivity"
-            android:windowSoftInputMode="stateAlwaysVisible"
-            android:label="@string/title_activity_feedback" >
-        </activity>
-
+            android:label="@string/title_activity_feedback"
+            android:windowSoftInputMode="stateAlwaysVisible" />
+        <activity
+            android:name=".act.BrowserActivity"
+            android:label="@string/title_activity_feedback"
+            android:windowSoftInputMode="stateAlwaysHidden" />
+        <activity
+            android:name=".act.BookActivity"
+            android:label="@string/title_activity_book"></activity>
 
         <service
             android:name=".openudid.OpenUDID_service"
-            android:exported="false" >
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.qiwenge.android.openudid.GETUDID" />
             </intent-filter>
         </service>
 
         <!-- receivers -->
-        <receiver android:name=".receivers.WifiStatusChangeReceiver" >
+        <receiver android:name=".receivers.WifiStatusChangeReceiver">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
                 <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
                 <action android:name="android.net.wifi.STATE_CHANGE" />
             </intent-filter>
         </receiver>
-        <receiver android:name=".receivers.UpdateReceiver" >
+        <receiver android:name=".receivers.UpdateReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
                 <action android:name="android.intent.action.DOWNLOAD_NOTIFICATION_CLICKED" />
@@ -114,7 +118,7 @@
         <service
             android:name="cn.jpush.android.service.PushService"
             android:enabled="true"
-            android:exported="false" >
+            android:exported="false">
             <intent-filter>
                 <action android:name="cn.jpush.android.intent.REGISTER" />
                 <action android:name="cn.jpush.android.intent.REPORT" />
@@ -127,14 +131,11 @@
         <receiver
             android:name="cn.jpush.android.service.PushReceiver"
             android:enabled="true"
-            android:exported="false" >
-            <intent-filter android:priority="1000" > <!-- since 1.3.5 -->
+            android:exported="false">
+            <intent-filter android:priority="1000">
                 <action android:name="cn.jpush.android.intent.NOTIFICATION_RECEIVED_PROXY" />
-                <!-- since 1.3.5 -->
                 <category android:name="com.qiwenge.android" />
-                <!-- since 1.3.5 -->
             </intent-filter>
-            <!-- since 1.3.5 -->
             <intent-filter>
                 <action android:name="android.intent.action.USER_PRESENT" />
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
@@ -150,7 +151,7 @@
         <activity
             android:name="cn.jpush.android.ui.PushActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+            android:theme="@android:style/Theme.Translucent.NoTitleBar">
             <intent-filter>
                 <action android:name="cn.jpush.android.ui.PushActivity" />
 
@@ -173,6 +174,26 @@
         <meta-data
             android:name="JPUSH_APPKEY"
             android:value="@string/JPUSH_APPKEY" />
+
+
+        <!-- QQ登陆必须 -->
+        <activity
+            android:name="com.tencent.tauth.AuthActivity"
+            android:launchMode="singleTask"
+            android:noHistory="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="tencent1103266474" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.tencent.connect.common.AssistActivity"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
     </application>
 
 </manifest>
