--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,7 +106,7 @@
 
         <meta-data
             android:name="UMENG_APPKEY"
-            android:value="@string/UMENG_APPKEY" />
+            android:value="${meta_umeng_appkey}" />
         <meta-data
             android:name="UMENG_CHANNEL"
             android:value="shuba" />
