--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+
+        maven { url "https://raw.githubusercontent.com/liuguangqiang/maven-center/master/repositories" }
     }
 }
