--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,14 +14,14 @@ android {
 
     buildTypes {
         release {
-          zipAlignEnabled true
-          minifyEnabled true
-          proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-          manifestPlaceholders = [meta_umeng_appkey:"5368adef56240b3e410337a7"]
+            zipAlignEnabled true
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            manifestPlaceholders = [meta_umeng_appkey: "5368adef56240b3e410337a7"]
         }
 
-        debug{
-          manifestPlaceholders = [meta_umeng_appkey:"53b5654c56240b75180224e9"]
+        debug {
+            manifestPlaceholders = [meta_umeng_appkey: "53b5654c56240b75180224e9"]
         }
     }
 
@@ -30,11 +30,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.2'
-    compile project(':libraries:devUtils')
     compile 'com.mcxiaoke.viewpagerindicator:library:+'
     compile 'com.hovans.pulltorefresh:library:2.1.1'
     compile 'com.nineoldandroids:library:2.4.+'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
     compile 'com.loopj.android:android-async-http:1.4.5'
+    compile 'com.google.code.gson:gson:2.2.2'
+    compile 'com.liuguangqiang:common:0.1.1'
 }
 
