--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,16 +12,29 @@ android {
         versionName "1.2.0"
     }
 
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+
+    ext {
+        UEMNG_APPKEY_DEV = '53b5654c56240b75180224e9'
+        UMENG_APPKEY_RELEASE = '5368adef56240b3e410337a7'
+    }
+
     buildTypes {
         release {
             zipAlignEnabled true
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            manifestPlaceholders = [meta_umeng_appkey: "5368adef56240b3e410337a7"]
+            manifestPlaceholders = [meta_umeng_appkey: UMENG_APPKEY_RELEASE]
         }
 
         debug {
-            manifestPlaceholders = [meta_umeng_appkey: "53b5654c56240b75180224e9"]
+            manifestPlaceholders = [meta_umeng_appkey: UEMNG_APPKEY_DEV]
         }
     }
 
@@ -37,5 +50,6 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.5'
     compile 'com.google.code.gson:gson:2.2.2'
     compile 'com.liuguangqiang:common:0.1.1'
+    compile 'com.j256.ormlite:ormlite-android:4.48'
 }
 
