Replaced jcenter by mavenCentral

--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,6 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
-
-        maven { url "https://raw.githubusercontent.com/liuguangqiang/maven-center/master/repositories" }
+        mavenCentral()
     }
 }
