--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
     <!-- jpush -->
     <uses-permission android:name="com.qiwenge.android.permission.JPUSH_MESSAGE" />
@@ -29,6 +30,11 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+
+        <!--<meta-data-->
+        <!--android:name="roboguice.annotations.packages"-->
+        <!--android:value="com.qiwenge.android"/>-->
+
         <activity
             android:name=".act.SplashActivity"
             android:label="@string/app_name"
