--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,9 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
     compile 'com.loopj.android:android-async-http:1.4.5'
     compile 'com.google.code.gson:gson:2.2.2'
-    compile 'com.liuguangqiang:common:0.1.1'
     compile 'com.j256.ormlite:ormlite-android:4.48'
+    compile 'org.roboguice:roboguice:3.0.1'
+    compile 'org.roboguice:roboblender:3.0.1'
+    compile 'com.github.liuguangqiang:common:0.1.1'
 }
 
