Just skip to MainAcitvity if haven't connect network.

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,5 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
- UEMNG_APPKEY_DEV = '53b5654c56240b75180224e9'
- UMENG_APPKEY_RELEASE = '5368adef56240b3e410337a7'
+ UEMNG_APPKEY_DEV=53b5654c56240b75180224e9
+ UMENG_APPKEY_RELEASE=5368adef56240b3e410337a7
