Added a dependenciy butterknife for injecting.

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@
 
  UEMNG_APPKEY_DEV=53b5654c56240b75180224e9
  UMENG_APPKEY_RELEASE=5368adef56240b3e410337a7
+
+ KEYSTORE_PWD=qiwenge2014
+ KEY_PWD=qiwenge2014
+ KEY_ALIAS=qiwenge
