--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.qiwenge.android"
         minSdkVersion 14
         targetSdkVersion 21
-        versionCode 120
-        versionName "1.2.0"
+        versionCode 202
+        versionName "2.0.2"
     }
 
     packagingOptions {
@@ -20,12 +20,26 @@ android {
         exclude 'META-INF/NOTICE.txt'
     }
 
+    signingConfigs{
+        release{
+            try {
+                storeFile file("qiwenge.keystore.jks")
+                storePassword KEYSTORE_PWD
+                keyAlias KEY_ALIAS
+                keyPassword KEY_PWD
+            }catch (ex){
+                throw new InvalidUserDataException("You have to define KEYSTORE_PWD and KEY_PWD.")
+            }
+        }
+    }
+
     buildTypes {
         release {
             zipAlignEnabled true
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             manifestPlaceholders = [meta_umeng_appkey: UMENG_APPKEY_RELEASE]
+            signingConfig signingConfigs.release
         }
 
         debug {
@@ -43,9 +57,9 @@ dependencies {
     compile 'com.nineoldandroids:library:2.4.+'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
     compile 'com.loopj.android:android-async-http:1.4.5'
-    compile 'com.google.code.gson:gson:2.2.2'
-    compile 'org.roboguice:roboguice:3.0.1'
-    compile 'org.roboguice:roboblender:3.0.1'
+    compile 'com.google.code.gson:gson:+'
     compile 'com.github.liuguangqiang:common:0.1.3'
+    compile 'com.github.bluejamesbond:textjustify-android:2.1.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
 }
 
