--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,6 @@ dependencies {
     compile 'com.github.liuguangqiang:common:0.1.3'
     compile 'com.github.bluejamesbond:textjustify-android:2.1.0'
     compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.facebook.rebound:rebound:0.3.7'
 }
 
