--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
 
     signingConfigs{
@@ -62,5 +63,7 @@ dependencies {
     compile 'com.github.bluejamesbond:textjustify-android:2.1.0'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.facebook.rebound:rebound:0.3.7'
+    compile 'com.google.dagger:dagger:2.0'
+    compile 'com.google.dagger:dagger-compiler:2.0'
 }
 
