--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.facebook.rebound:rebound:0.3.7'
     compile 'com.google.dagger:dagger:2.0'
-    compile 'com.google.dagger:dagger-compiler:2.0'
+    compile 'com.github.liuguangqiang.mvp:library:0.1.0'
+    compile 'com.github.liuguangqiang.aframework:library:1.0.2'
 }
 
