--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,12 +58,12 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.2'
     compile 'com.loopj.android:android-async-http:1.4.5'
     compile 'com.google.code.gson:gson:+'
-    compile 'com.github.liuguangqiang:common:0.1.3'
     compile 'com.github.bluejamesbond:textjustify-android:2.1.0'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.facebook.rebound:rebound:0.3.7'
-    compile 'com.google.dagger:dagger:2.0'
     compile 'com.github.liuguangqiang.mvp:library:0.1.0'
     compile 'com.github.liuguangqiang.aframework:library:1.0.2'
+    compile 'com.squareup.dagger:dagger:1.2.2'
+    compile 'com.squareup.dagger:dagger-compiler:1.2.2'
 }
 
