--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ android {
 
     productFlavors {
         shuba {}
-        googleplay {}
+//        googleplay {}
     }
 
     productFlavors.all { flavor ->
