--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,16 +37,19 @@
             android:launchMode="standard"
             android:screenOrientation="portrait"
             android:theme="@style/SplashTheme">
+        </activity>
+        <activity
+            android:name=".act.MainActivity"
+            android:label="@string/app_name"
+            android:launchMode="standard"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".act.MainActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".act.ChapterActivity"
             android:launchMode="singleTask"
